--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Are you bored and annoyed when it comes to fuel cost calculation before or after the trip? You can use quick calculation instead! Spend more time on your journey rather arguing about expenses with our platform!">
     <meta name="keywords" content="trip planner, travel expenses, cost sharing, route planning, планування поїздок, витрати на подорож, розподіл витрат, планування маршруту">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <header class="header">
