--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Are you bored and annoyed when it comes to fuel cost calculation before or after the trip? You can use quick calculation instead! Spend more time on your journey rather arguing about expenses with our platform!">
     <meta name="keywords" content="trip planner, travel expenses, cost sharing, route planning, планування поїздок, витрати на подорож, розподіл витрат, планування маршруту">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
     <!-- Favicon and Icons -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -17,12 +20,17 @@
     <link rel="icon" href="/android-chrome-512x512.png" sizes="512x512" type="image/png">
     <link rel="manifest" href="/site.webmanifest">
 </head>
-<body>
+<body data-theme="light">
 <header class="header">
     <div class="container">
         <div class="language-switch">
             <button onclick="setLanguage('en')">EN</button>
             <button onclick="setLanguage('uk')">UA</button>
+        </div>
+        <div class="mode-switch">
+          <!--  <button id="mode-toggle">Dark/Light Mode</button> -->
+            <input type="checkbox" id="darkmode-toggle"/>
+            <label for="darkmode-toggle"></label>
         </div>
         <h1 data-lang-en="Split expenses simply!" data-lang-uk="Просто поділіть витрати!">Split expenses simply!</h1>
         <div class="buttons">
@@ -106,6 +114,7 @@
                 <input type="number" id="fuelCost" name="fuelCost" step="0.01" min="0" required>
             </div>
             <button type="submit" class="btn" data-lang-en="Calculate" data-lang-uk="Розрахувати">Calculate</button>
+            <button type="reset" class="btn" data-lang-en="Reset" data-lang-uk="Скинути">Reset</button>
         </form>
         <div id="result" class="result"></div>
     </div>
