--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
         </div>
         <h1 data-lang-en="Split expenses simply!" data-lang-uk="Просто поділіть витрати!">Split expenses simply!</h1>
         <div class="buttons">
-            <button class="btn inactive" title="Coming soon" data-lang-en="Create a trip" data-lang-uk="Створити поїздку">Create a trip</button>
+            <button class="btn inactive" title="" data-lang-en="Create a trip" data-lang-uk="Створити поїздку" data-title-en="Coming soon" data-title-uk="Скоро буде доступно">Create a trip</button>
             <button class="btn" onclick="showCalculator()" data-lang-en="Calculate now" data-lang-uk="Швидкий розрахунок">Calculate now</button>
         </div>
     </div>
